--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,5 +1,142 @@
-div {
-font-size: 3em;
-color: blue;
-text-align: center;
+/********** Base styles **********/
+
+* {
+    box-sizing: border-box;
+    font-family: system-ui;
+}
+
+h1 {
+    margin-bottom: 50px;
+    text-align: center;
+    margin-top: 40px;
+    color: #333;
+}
+
+.no {
+    border: 1px solid black;
+    padding: 0px;
+    background-color: #c6ffd4;
+    min-height: 100px;
+    margin: 20px 10px;
+    margin-top: 0;
+}
+
+#no1 , #no2 , #no3 {
+    float: right;
+    border: 1px solid black;
+    margin: -1px;
+    background-color: yellow;
+}
+#no2 {
+    background-color: tomato
+}
+#no3 {
+    background-color: chartreuse;
+}
+p {
+    clear: both;
+    padding: 10px;
+    line-height: 20px;
+    text-align: justify;
+}
+h2 {
+    padding: 0 15px;
+    line-height: 0;
+}
+
+
+/* Responsive Framework */
+
+.row {
+    width: 100%;
+}
+
+/***** Large devices only *****/
+
+@media (min-width: 992px) {
+    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+        float: left;
+       
+    }
+    .col-lg-1 {
+        width: 8.33%;
+    }
+    .col-lg-2 {
+        width: 16.66%;
+    }
+    .col-lg-3 {
+        width: 25%;
+    }
+    .col-lg-4 {
+        width: 33.33%;
+    }
+    .col-lg-5 {
+        width: 41.66%;
+    }
+    .col-lg-6 {
+        width: 50%;
+    }
+    .col-lg-7 {
+        width: 58.33%;
+    }
+    .col-lg-8 {
+        width: 66.66%;
+    }
+    .col-lg-9 {
+        width: 74.99%;
+    }
+    .col-lg-10 {
+        width: 83.33%;
+    }
+    .col-lg-11 {
+        width: 91.66%;
+    }
+    .col-lg-12 {
+        width: 100%;
+    }
+}
+
+/***** Medium devices only *****/
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
+       
+    }
+    .col-md-1 {
+        width: 8.33%;
+    }
+    .col-md-2 {
+        width: 16.66%;
+    }
+    .col-md-3 {
+        width: 25%;
+    }
+    .col-md-4 {
+        width: 33.33%;
+    }
+    .col-md-5 {
+        width: 41.66%;
+    }
+    .col-md-6 {
+        width: 50%;
+    }
+    .col-md-7 {
+        width: 58.33%;
+    }
+    .col-md-8 {
+        width: 66.66%;
+    }
+    .col-md-9 {
+        width: 74.99%;
+    }
+    .col-md-10 {
+        width: 83.33%;
+    }
+    .col-md-11 {
+        width: 91.66%;
+    }
+    .col-md-12 {
+        width: 100%;
+    }
 }
